Mudança na estrutura do database e post

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3001
-CONNECTION_STRING=postgresql://postgres:1405@localhost:5432/FeedbackHGF
+DB_USER=postgres
+DB_PASSWORD=0502
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=FeedbackHGF
